Nav bar y span edit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,10 @@ import Badge from '../components/Badge.astro';
 <Layout title="Welcome to Astro.">
 	<main>
 		<section class="w-full lg:w-[740px] mx-auto py-44">
-			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-2 pb-4">Hey, soy Ricardo <div class="flex justify-center items-center">
+			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-2 pb-4">Hey, soy Ricardo <a href="" target="_blank" rel="noopener" class="flex justify-center items-center">
 				<Badge>Disponible para Trabajar</Badge>
-			</div></h1>
-			<h2>Desarrollador Web y Artista Creativo de Medio Tiempo. De México, Ciudad de México 😎. Especializado en crear aplicaciones únicas.</h2>
+			</></h1>
+			<h2 class="text-xl opacity-80">Desarrollador Web y Artista Creativo de Medio Tiempo. De México, Ciudad de México 😎. Especializado en crear aplicaciones únicas.</h2>
 		</section >
 	</main>
 </Layout>
